--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@ body {
   background-color: #EFEFEF;
   padding: 20px 30px;
   border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 h1{
@@ -72,6 +73,7 @@ button:hover {
 
 .todo-form {
   padding-bottom: 1.5rem;
+  
 }
 
 input, select {
